# pallet-6d-pose-estimation

./: .gitignore  DEMO.md  requirements.txt  run_pipeline.py  run_pipeline.sh
camera_capture/: COMPLETE_CPP_SETUP_GUIDE.md  README.md
camera_capture/d400e_cpp/: BUILD_CPP.md  CMakeLists.txt  capture_d400e.cpp
camera_capture/d400e_cpp/backup/: capture_d400e.cpp  capture_d400e_enhanced.cpp  capture_d400e_interactive.cpp  capture_d400e_production.cpp
code/: T_world_mesh_chosen_yaw_xyz.txt  pallet_mesh_in_world_chosen_yaw_xyz.ply
code/code/: cam_to_world.py  real_world_depth_clean.py  real_world_depth_crop.py  register_new_constraint_init.py
real_world_code/: readME.md
real_world_code/pallet_mesh/: Pallet_world_dim_transforms.ply
real_world_code/real_world_code/: clean_before_icp.py  demo_capture.py  floor_remove.py  main.py  publish_to_viz.py  real_world_depth_crop.py  register_new_constraint_init.py  set_ground_truth.py  viz_standalone.py
simulation_code/: ReadME.md
simulation_code/simulation_code/: floor_remove.py  register_new_constraint.py  sim_cam_to_world.py  sim_depth_crop.py  sim_main.py
trajectory_viz/: README.md  package.xml  setup.cfg  setup.py
trajectory_viz/config/: display.rviz  pallet_poses.yaml
trajectory_viz/launch/: viz.launch.py
trajectory_viz/meshes/: pallet.stl
trajectory_viz/scripts/: launch.sh  snap_clean_exec.sh
trajectory_viz/trajectory_viz/: animation_control.py  simulation_node.py
